borderlayout & gridlayout fix, loginbuttons stretched again

--- a/src/component/frontend/login/Login.scss
+++ b/src/component/frontend/login/Login.scss
@@ -31,11 +31,11 @@ body {
     box-shadow: 10px 8px 25px 0px rgba(0,0,0,0.5);
   }
   //width of user inputs
-  #username, #loginbtn, #password {
+  #username, #loginbtn, #password, #featbtn {
     width: 100%;
   }
   //margins in mask
-  img, .p-float-label, #password, .checkStay{
+  img, .p-float-label, #password {
     margin-bottom: 6%;
   }
 }
